@@ -1,3 +1,9 @@
+Wed, May 7, 2008 Daniel R Fisher
+1.  Made the redistribution of electrons in
+    QMCDansWalkerInitialization to avoid charged atoms a bit more
+    aggressive.  It was having trouble initializing O3 triplet
+    molecules.
+
 Thurs, April 24, 2008 Daniel R Fisher
 1.  Fixed a problem in QMCDerivativeProperties.  If there are no
     samples in the QMCProperties, it divides by zero when it tries to
